# beware

./: .dockerignore  .gitignore  Dockerfile  README.md  Requirements.txt  pyproject.toml
app/: app.py  cnn_model.py  logger.py  main.py  model_utils.py  optimized_data_loader.py  trainer.py
src/: app.py  cnn_model.py
tests/: test_benchmark.py  test_classify.py
